# WasmCloud-websocket-client-provider

./: .gitignore  Agents.md  Cargo.toml  Makefile  README.md  SUMMARY.md  TESTING.md  TEST_RESULTS.md  WASH_CLI.md  wadm.yaml  wasmcloud.toml
.github/workflows/: ci.yml  release.yml
component/: wasmcloud.toml
component/src/: lib.rs
component/wit/: world.wit
examples/: README.md  configuration.md
src/: config.rs  error.rs  lib.rs  main.rs  nats_forwarder.rs  provider.rs  websocket.rs
tests/: README.md  integration_test.rs  run_integration_test.sh  websocket_server.py
wit/: world.wit
