[package]
name = "wasmcloud-websocket-provider"
version = "0.1.0"
edition = "2021"
authors = ["64BitAsura"]
description = "A unidirectional WebSocket client provider for WasmCloud"
license = "Apache-2.0"

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
async-nats = "0.37"
url = "2.5"
futures-util = "0.3"
tracing = "0.1"
wasmcloud-provider-sdk = { version = "0.13.0", features = ["otel"] }
wit-bindgen-wrpc = "0.9.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
