[package]
name = "wasmcloud-provider-websocket"
version = "0.1.0"
edition = "2021"
description = """
A capability provider for unidirectional WebSocket client functionality.
Connects to remote WebSocket servers and forwards messages to wasmCloud components via NATS.
"""

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wasmcloud-provider-sdk = { version = "0.13.0", features = ["otel"] }
wit-bindgen-wrpc = "0.9.0"

# WebSocket dependencies
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.24"
futures-util = "0.3"

# Additional utilities
url = "2"
base64 = "0.22"
thiserror = "1"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
